# Palantir

./: .codecov.yml  .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml  setup.py
.github/workflows/: python-package.yml
data/: sample_tsne.p
docs/: requirements.txt
docs/source/: conf.py  core.rst  index.rst  plot.rst  preprocess.rst  presults.rst  utils.rst
notebooks/: Palantir_sample_notebook.ipynb  manuscript_data.ipynb
notebooks/comparisons/: dpt.ipynb  fateid.ipynb  monocle2.ipynb  paga.ipynb  slignshot.ipynb
notebooks/comparisons/results/fateid/: CLP_order.csv  DC_order.csv  Ery_order.csv  Mega_order.csv  Mono_order.csv  clusters.csv  probs.csv  tsne.csv
notebooks/comparisons/results/monocle2/: phenodata.csv  red_dims.csv
notebooks/comparisons/results/slingshot/: Lineage1_CD34.csv  Lineage1_CD79A.csv  Lineage1_CD79B.csv  Lineage1_CEBPD.csv  Lineage1_CEBPG.csv  Lineage1_CSF1R.csv  Lineage1_GATA1.csv  Lineage1_IRF8.csv  Lineage1_ITGA2B.csv  Lineage1_MPO.csv  Lineage1_RAG1.csv  Lineage1_SPI1.csv  Lineage2_CD34.csv  Lineage2_CD79A.csv  Lineage2_CD79B.csv  Lineage2_CEBPD.csv  Lineage2_CEBPG.csv  Lineage2_CSF1R.csv  Lineage2_GATA1.csv  Lineage2_IRF8.csv  Lineage2_ITGA2B.csv  Lineage2_MPO.csv  Lineage2_RAG1.csv  Lineage2_SPI1.csv  Lineage3_CD34.csv  Lineage3_CD79A.csv  Lineage3_CD79B.csv  Lineage3_CEBPD.csv  Lineage3_CEBPG.csv  Lineage3_CSF1R.csv  Lineage3_GATA1.csv  Lineage3_IRF8.csv  Lineage3_ITGA2B.csv  Lineage3_MPO.csv  Lineage3_RAG1.csv  (+17 more)
src/palantir/: .nfs000000049f47c84a00009cfb  __init__.py  cli.py  config.py  core.py  io.py  plot.py  plot_utils.py  preprocess.py  presults.py  utils.py  validation.py  version.py
tests/: conftest.py  core_run_palantir.py  plot.py  presults.py  presults_compute_gene_trends.py  test_core_equivalence.py  test_core_run_palantir.py  test_integration.py  test_io.py  test_plot.py  test_preprocess.py  test_presults.py  test_presults_cluster_gene_trends.py  test_presults_compute_gene_trends.py  test_presults_gam_fit_predict.py  test_presults_select_branch_cells.py  test_util_density.py  test_util_run_pca.py  test_utils_compute_kernel.py  test_utils_density_functions.py  test_utils_determine_multiscale_space.py  test_utils_early_cell_functions.py  test_utils_run_diffusion_maps.py  test_utils_run_local_variability.py  test_utils_run_magic_imputation.py  test_validation.py  utils_compute_kernel.py  utils_diffusion_maps_from_kernel.py  utils_run_diffusion_maps.py  utils_run_local_variability.py  utils_run_magic_imputation.py  utils_run_pca.py
