[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palantir"
version = "1.4.2"
description = "Palantir for modeling continuous cell state and cell fate choices in single cell data"
authors = [
    {name = "Palantir development team", email = "manu.talanki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.14.2",
    "pandas>=0.22.0",
    "scipy>=1.3",
    "networkx>=2.1",
    "scikit-learn",
    "joblib",
    "matplotlib>=3.8.0",
    "anndata>=0.8.0",
    "scanpy>=1.6.0",
    "mellon>=1.6.1",
    "ml_dtypes>=0.5.0",
    "igraph>=0.11.8",
]

[project.optional-dependencies]
gam = [
    "pygam",
]

fcs = [
    "fcsparser>=0.1.2",
]

full = [
    "pygam",
    "fcsparser>=0.1.2",
]

test-base = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "h5py",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "h5py",
    "fcsparser>=0.1.2",
]

pre313 = [
    "fcsparser>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/dpeerlab/palantir"
"Bug Tracker" = "https://github.com/dpeerlab/palantir/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["palantir"]
omit = [
    "tests/*",
    "*/config.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "def _return_cell",
    "print"
]

[project.scripts]
palantir-cli = "palantir.cli:main"
